--- a/2.html
+++ b/2.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/example.css">
 </head>
 <body>
+    <button>이름변경</button>
+    <h1></h1>
     <img src="image/game_1.jpg" id="image1"></image>
     <img src="image/game_2.jpg" id="image2"></image>
     <script src="js/example.js"></script>
